--- a/CV.html
+++ b/CV.html
@@ -5,6 +5,7 @@
     <title>Curriculum Vitae</title>
 </head>
 <body>
+    <h1>Ballinas Palma Irving</h1>
     <h1>Ingenieria en Computacion</h1>
 
     <hr/>
@@ -16,5 +17,48 @@
         <li>Software: Matlab, Paquetería Office, IDEs como eclipse, Virtual Box, PovRay, Blender, Weka, Mathematica,
             Software R, IntelliJ IDEA, Ruby Mine, DataGrip.</li>
     </ul>
+
+    <hr/>
+    <h2>
+        Habilidades Profesionales
+    </h2>
+    <ul>
+        <li>Autodidacta</li>
+        <li>Adaptabilidad</li>
+        <li>Gestión Organizacional</li>
+    </ul>
+
+    <hr/>
+    <h2>
+        Cursos
+    </h2>
+    <ul>
+        <li>Java – Junio 2016 </li>
+        <li>HTML5, PHP basic – March 2017</li>
+        <li>Blender – May 2017</li>
+        <li>Python – marzo 2017</li>
+        <li>Software R – Abril 2017</li>
+        <li>Ruby – Julio 2017</li>
+    </ul>
+
+    <hr/>
+    <h2>
+        Idiomas
+    </h2>
+    <ul>
+        <li>Lengua Materna: Español</li>
+        <li>Lengua Extranjera: Ingles-Intermedio</li>
+    </ul>
+
+    <hr/>
+
+    <h2>Otros Datos de Interés</h2>
+    <ul>
+        <li>Colaboración en la modificación de InAge: Una Herramienta para el Desarrollo y Simulación de Sociedad de Agentes Reactivos,
+            tesis del Ing. Sayde Alcántara Santiago de la Universidad Tecnológica de la Mixteca, este proyecto se encuentra alojado
+            en mi repositorio de GitHub.
+        </li>
+    </ul>
+
 </body>
 </html>
