--- a/CV.html
+++ b/CV.html
@@ -60,5 +60,16 @@
         </li>
     </ul>
 
+    <h2>
+        Imagenes De Interés
+    </h2>
+    <ul>
+        <li>
+            Imagenes de cosas Que me gustan en este <a href="imagenes.html">link</a>
+        </li>
+    </ul>
+
+
+
 </body>
 </html>
