--- a/CV.html
+++ b/CV.html
@@ -69,6 +69,12 @@
             Imagenes de cosas Que me gustan en este <a href="imagenes.html">link</a>
         </li>
     </ul>
+        <div class="page">
+        <a class="button" href="imagenes.html"> Gustos</a>
+    </div>
+
+
+    <p class="synopsis">Un ejemplo de un estilo en <em>HTML</em>  <strong>super</strong> facil.</p>
 
 
 
